--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,8 +27,8 @@ jobs:
         echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
         echo "AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}" >> $GITHUB_ENV
 
-    # - name: Initialize Terraform
-    #   run: terraform init
+    - name: Initialize Terraform
+      run: terraform init
 
     # - name: Terraform Plan
     #   run: terraform plan
