--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,9 +30,13 @@ jobs:
     - name: Initialize Terraform
       run: terraform init
 
-    - name: Terraform Plan
-      run: terraform plan
+    # - name: Terraform Plan
+    #   run: terraform plan
 
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply --auto-approve
+    # - name: Terraform Apply
+    #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    #   run: terraform apply --auto-approve
+
+    - name: Terraform Destroy
+      run: terraform destroy --auto-approve
+
