--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,38 +1,62 @@
-name: Terraform Workflow
+# name: Terraform Workflow
+
+# on:
+#   push:
+#     branches:
+#       - '**' 
+#   pull_request:
+#     branches:
+#       - '**' 
+
+# jobs:
+#   terraform:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout Repository
+#       uses: actions/checkout@v2
+
+#     - name: Set up Terraform
+#       uses: hashicorp/setup-terraform@v1
+#       with:
+#         terraform_version: ${{ env.TF_VERSION }}
+
+#     - name: Configure AWS credentials
+#       run: |
+#         echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+#         echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+#         echo "AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}" >> $GITHUB_ENV
+
+#     - name: Initialize Terraform
+#       run: terraform init
+
+#     - name: Terraform Plan
+#       run: terraform plan
+
+#     - name: Terraform Apply
+#       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+#       run: terraform apply --auto-approve
+
+name: Destroy Terraform
 
 on:
-  push:
-    branches:
-      - '**' 
-  pull_request:
-    branches:
-      - '**' 
+  workflow_dispatch: # Allows the workflow to be manually triggered
 
 jobs:
-  terraform:
+  destroy:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout Repository
+    - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Terraform
+    - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: ${{ env.TF_VERSION }}
-
-    - name: Configure AWS credentials
-      run: |
-        echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
-        echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
-        echo "AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}" >> $GITHUB_ENV
 
     - name: Initialize Terraform
       run: terraform init
 
-    - name: Terraform Plan
-      run: terraform plan
+    - name: Destroy Infrastructure
+      run: terraform destroy -auto-approve
 
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply --auto-approve
+    - name: Cleanup
+      run: rm -rf .terraform/
