--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,39 +30,15 @@ jobs:
     - name: Initialize Terraform
       run: terraform init
 
-    # - name: Terraform Plan
-    #   run: terraform plan
+    - name: Terraform Plan
+      run: terraform plan
 
-    # - name: Terraform Apply
-    #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    #   run: terraform apply --auto-approve
+    - name: Terraform Apply
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: terraform apply --auto-approve
 
-    - name: Destroy Infrastructure
-      run: terraform destroy -auto-approve
+    # - name: Destroy Infrastructure
+    #   run: terraform destroy -auto-approve
 
-    - name: Cleanup
-      run: rm -rf .terraform/
-
-# name: Destroy Terraform
-
-# on:
-#   workflow_dispatch: # Allows the workflow to be manually triggered
-
-# jobs:
-#   destroy:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: Checkout code
-#       uses: actions/checkout@v2
-
-#     - name: Setup Terraform
-#       uses: hashicorp/setup-terraform@v1
-
-#     - name: Initialize Terraform
-#       run: terraform init
-
-#     - name: Destroy Infrastructure
-#       run: terraform destroy -auto-approve
-
-#     - name: Cleanup
-#       run: rm -rf .terraform/
+    # - name: Cleanup
+    #   run: rm -rf .terraform/
